[package]
name = "safejar"
version = "0.1.1" # Semantic version
authors = ["Joel De Jesus <joel@noncepad.com>"] # Optional for newer Cargo versions
edition = "2021" # Rust edition
description = "A treasury management program for Solana."
license = "MIT" # Choose a license or specify one
repository = "https://github.com/noncepad/safejar" # Optional, if hosted on GitHub
keywords = ["treasury", "solana"] # Optional, for discoverability
categories = ["fintech"] # Optional, see: https://cr

[lib]
crate-type = ["cdylib", "lib"]
name = "safejar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
verbose = []
test = []


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0" 
#bytemuck = "1.13.1"
#solana-address-lookup-table-program = "1.18.12"


[dev-dependencies]

solana-program = "1.18"
#solana_rbpf="=0.8.5"
#solana-program-test = "=1.18.12"
solana-program-test = "1.18"
solana-sdk = "1.18"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
rand = "0.8.5"
#borsh = "1.3.0"
spl-associated-token-account = "2"
bincode = "1.3.3"
hex = "0.4.3"


